fixed yellow box and set z-index for box blue

--- a/part-1/css/styles.css
+++ b/part-1/css/styles.css
@@ -44,9 +44,10 @@ body {
 
 .blue {
   background-color: lightblue;
-  position: absolute;
+  position: relative;
   top: 50px;
   left: 200px;
+  z-index: 1;
 }
 
 .orange {
@@ -58,4 +59,7 @@ body {
 
 .yellow {
   background-color: yellow;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
 }
